# learncpp

./: .clang-format  .gitignore  CMakeLists.txt
1_Basics/: CMakeLists.txt
1_Basics/1.5_Iostream/: CMakeLists.txt  main.cpp
1_Basics/1.6_Uninitialized_Variables/: CMakeLists.txt  main.cpp
2_Function_and_Files/: CMakeLists.txt
2_Function_and_Files/2.9_Preprocessor/: CMakeLists.txt  main.cpp  translation_unit.i
3_Debugging/: CMakeLists.txt
3_Debugging/3.4_Debugging_Tactics/: CMakeLists.txt
4_Fundamental_Data_Types/: CMakeLists.txt
4_Fundamental_Data_Types/4.10_Chars/: CMakeLists.txt  main.cpp
4_Fundamental_Data_Types/4.6_Fixed_Width_Integers/: CMakeLists.txt  main.cpp
4_Fundamental_Data_Types/4.7_Scientific_Notation/: CMakeLists.txt  main.cpp
4_Fundamental_Data_Types/4.8_Floating_Point_Numbers/: CMakeLists.txt  main.cpp
5_Constants_and_Strings/: CMakeLists.txt
5_Constants_and_Strings/5.3_Numeral_Systems/: CMakeLists.txt  main.cpp
5_Constants_and_Strings/5.5_Constant_Expressions/: CMakeLists.txt  main.cpp
5_Constants_and_Strings/5.6_Constexpr/: CMakeLists.txt  main.cpp
5_Constants_and_Strings/5.7_Strings/: CMakeLists.txt  main.cpp
5_Constants_and_Strings/5.8_String_View/: CMakeLists.txt  main.cpp
6_Operators/: CMakeLists.txt
6_Operators/6.3_Remainder_and_Exponentiation/: CMakeLists.txt  main.cpp
6_Operators/6.4_Increment_and_Decrement/: CMakeLists.txt  main.cpp
6_Operators/6.6_Conditional_Operator/: CMakeLists.txt  main.cpp
7_Bit_Manipulation/: CMakeLists.txt
8_Scope/: CMakeLists.txt
9_Control_Flow/: CMakeLists.txt
(+38 files in other folders)
